--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div data-aos="zoom-in" data-aos-delay="100">
             <img
             src="_assets/images.png"
-            alt="Imagem sobre a barbearia"
+            alt="Imagem sobre o ateliê"
             />
         </div>
 
