--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         data-aos="zoom-in-up"
                         data-aos-delay="300"
                         data-aos-duration="1500"
-                         src="_assets/favicon_io/logo.svg" alt="logo ateliê da Nita" />
+                         src="_assets/logo.png" alt="logo ateliê da Nita" />
                     </div>
                     <div class="header-icons" data-aos="fade-left" data-aos-delay="200">
                         <a href="https://www.instagram.com/" target="_blank">
@@ -94,10 +94,7 @@
    </div>
    <section class="haircuts">
     <div class="haircut" data-aos="fade-up" data-aos-delay="200">
-        <img
-        src="_assets/foto1.png"
-        alt="troca de ziper"
-        />
+        <img src="_assets/foto1.png" alt="troca de ziper"/>
         <div class="haircut-info">
             <strong>Troca de ziper</strong>
             <button>
