--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="container about-content">
         <div data-aos="zoom-in" data-aos-delay="100">
             <img
-            src="_assets/images.png"
+            src="images/images.png"
             alt="Imagem sobre o ateliê"
             />
         </div>
