--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         data-aos="zoom-in-up"
                         data-aos-delay="300"
                         data-aos-duration="1500"
-                         src="_assets/logo.png" alt="logo ateliê da Nita" />
+                         src="logo.png" alt="logo ateliê da Nita" />
                     </div>
                     <div class="header-icons" data-aos="fade-left" data-aos-delay="200">
                         <a href="https://www.instagram.com/" target="_blank">
@@ -67,7 +67,7 @@
     <div class="container about-content">
         <div data-aos="zoom-in" data-aos-delay="100">
             <img
-            src="images/images.png"
+            src="images.png"
             alt="Imagem sobre o ateliê"
             />
         </div>
@@ -94,7 +94,7 @@
    </div>
    <section class="haircuts">
     <div class="haircut" data-aos="fade-up" data-aos-delay="200">
-        <img src="_assets/foto1.png" alt="troca de ziper"/>
+        <img src="foto1.png" alt="troca de ziper"/>
         <div class="haircut-info">
             <strong>Troca de ziper</strong>
             <button>
@@ -104,7 +104,7 @@
     </div>
     <div class="haircut" data-aos="fade-up" data-aos-delay="400">
         <img
-        src="_assets/foto2.png"
+        src="foto2.png"
         alt="bainha de lençol"
         />
         <div class="haircut-info">
@@ -117,7 +117,7 @@
     </div>
     <div class="haircut" data-aos="fade-up" data-aos-delay="600">
         <img
-        src="_assets/foto3.png"
+        src="foto3.png"
         alt="ajuste  de vestido"
         />
         <div class="haircut-info">
@@ -153,9 +153,9 @@
                     
                 </div>
                 <div>
-                <img src="_assets/logo.svg" alt="logo Ateliê"/>
+                <img src="logo.svg" alt="logo Ateliê"/>
                 </div>
-                <p>Copyright 2023 | Jhony Dev. - Todos os direitos reservados</p>
+                <p>Copyright 2023 | JS.Web - Todos os direitos reservados</p>
             </footer>
 
             <a
@@ -164,7 +164,7 @@
             target="_blank"
             data-aos="zoom-in-up" data-aos-delay="400"
             >
-            <img src="_assets/whatssapp.svg" alt="whatssapp"/>
+            <img src="whatssapp.svg" alt="whatssapp"/>
             <span class="tooltip-text">Entre em contato</span>
         
         </a>
