--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <header>
 
-            <nav class="header-content container">
+            <nav class="header-content container" style="background-image: url('fundo.png')">
 
                 
                 <div>
