--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <body>
     <div class="bg-home">
         
-        <header>
+        <header style="background-image: url('fundo.png'); width: 100%">
 
-            <nav class="header-content container" style="background-image: url('fundo.png'); width: 100%">
+            <nav class="header-content container">
 
                 
                 <div>
