--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="bg-home">
         
-        <header style="background-image: url('fundo.png'); width: 100%">
+        <header style="background-image: url('fundo.png'); width: 100%; height: 768px;">
 
             <nav class="header-content container">
 
