--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <title>Ateliê da Nita</title>
 </head>
 <body>
-    <div class="bg-home">
+    <div class="bg-home" style="background-image: url('fundo.png'); width: 100%; height: 800px;">
         
-        <header style="background-image: url('fundo.png'); width: 100%; height: 800px;">
+        <header>
 
             <nav class="header-content container">
 
