--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Ateliê da Nita</title>
 </head>
 <body>
-    <div class="bg-home" style="background-image: url('fundo.png'); width: 100%; height: 800px;">
+    <div class="bg-home" style="background-image: url('fundo.png'); width: 100%;">
         
         <header>
 
